@@ -13,6 +13,8 @@
 	(config_log_write_entry): Make sure to write log when socket_owner
 	not set
 
+	* location.c (location_get_config_log): Implement
+
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
 	* bonobo-config-archiver.c (bonobo_config_archiver_destroy): Don't
